# DownfallEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakelists.txt  README.md  build.sh
assets/scenes/: test.txt
assets/shaders/: test.frag  test.vert
include/engine/: dwn_camera.hpp  dwn_component.hpp  dwn_engine.hpp  dwn_material.hpp  dwn_mesh.hpp  dwn_object.hpp  dwn_renderer.hpp  dwn_shader.hpp  dwn_texture.hpp  dwn_window.hpp
include/engine/managers/: dwn_manager.hpp  dwn_shader_manager.hpp
include/engine/resources/: dwn_resource.hpp  dwn_resource_manager.hpp  dwn_scene.hpp
include/engine/ui/: dwn_ui.hpp
include/math/: dwn_transform.hpp
src/: main.cpp
src/engine/: dwn_camera.cpp  dwn_component.cpp  dwn_engine.cpp  dwn_mesh.cpp  dwn_object.cpp  dwn_renderer.cpp  dwn_shader.cpp  dwn_texture.cpp  dwn_window.cpp
src/engine/managers/: dwn_manager.cpp
src/engine/resources/: dwn_resource.cpp  dwn_scene.cpp
src/engine/ui/: dwn_ui.cpp
src/math/: dwn_transform.cpp
